Fixed input bug on mobile

--- a/style.css
+++ b/style.css
@@ -138,6 +138,11 @@ body {
   background-position: center;
   overflow: hidden;
 }
+input[type="text"],
+input[type="number"],
+textarea {
+  font-size: 16px;
+}
 
 body {
   display: flex;
